--- a/static/css/aadhaar.css
+++ b/static/css/aadhaar.css
@@ -7,6 +7,15 @@ body, html {
   overflow-x: hidden;
   height: 100vh;
 }
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
 
 .aadhaar-container {
   display: flex;
