--- a/static/css/home.css
+++ b/static/css/home.css
@@ -4,6 +4,15 @@ body {
   background: linear-gradient(to right, #111827, #1f2937);
   color: #f3f4f6;
 }
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
 
 .hero {
   text-align: center;
