--- a/static/css/imageupload.css
+++ b/static/css/imageupload.css
@@ -14,6 +14,17 @@ body, html {
   overflow-x: hidden;
 }
 
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+
 .image-upload-container {
   display: flex;
   justify-content: center;
