--- a/static/css/login.css
+++ b/static/css/login.css
@@ -11,6 +11,17 @@ body {
   overflow: hidden;
 }
 
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+
 .login-container {
   background-color: #2b2b2b;
   padding: 40px;
