--- a/static/css/report.css
+++ b/static/css/report.css
@@ -15,6 +15,17 @@ body {
   text-align: center;
 }
 
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+
 /* Stepbar horizontal and responsive */
 .stepbar {
   display: flex;
