--- a/static/css/thankyou.css
+++ b/static/css/thankyou.css
@@ -20,6 +20,17 @@ body, html {
   position: relative;
 }
 
+#particles-js {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+
+
 .feature-box {
   background: #1f2937;
   padding: 40px 30px;
