--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,8 @@
   <link href="/static/css/home.css" rel="stylesheet"/>
 </head>
 <body>
+  <div id="particles-js"></div>
+
   <div class="hero">
     <h1>CareConnect</h1>
     <p>Your AI-powered assistant for fast, secure and intelligent health assessment.</p>
@@ -44,5 +46,44 @@
   </div>
 
   <script src="/static/js/home.js"></script>
+  <!-- Particle JS Library -->
+<script src="/static/js/particles.min.js"></script>
+
+<!-- Particle Config -->
+<script>
+particlesJS("particles-js", {
+  "particles": {
+    "number": { "value": 60 },
+    "color": { "value": "#a855f7" },
+    "shape": { "type": "circle" },
+    "opacity": { "value": 0.6 },
+    "size": { "value": 3 },
+    "line_linked": {
+      "enable": true,
+      "distance": 130,
+      "color": "#a855f7",
+      "opacity": 0.4,
+      "width": 1
+    },
+    "move": {
+      "enable": true,
+      "speed": 2
+    }
+  },
+  "interactivity": {
+    "detect_on": "canvas",
+    "events": {
+      "onhover": { "enable": true, "mode": "repulse" },
+      "onclick": { "enable": true, "mode": "push" }
+    },
+    "modes": {
+      "repulse": { "distance": 100 },
+      "push": { "particles_nb": 4 }
+    }
+  },
+  "retina_detect": true
+});
+</script>
+
 </body>
 </html>
