--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/static/css/login.css">
 </head>
 <body>
+  <div id="particles-js"></div>
+
   <div class="login-container">
     <h2>Welcome to CareConnect</h2>
     <p>Login with mobile or continue as guest</p>
@@ -22,5 +24,44 @@
   </div>
 
   <script src="/static/js/login.js"></script>
+  <!-- Particle JS Library -->
+<script src="/static/js/particles.min.js"></script>
+
+<!-- Particle Config -->
+<script>
+particlesJS("particles-js", {
+  "particles": {
+    "number": { "value": 60 },
+    "color": { "value": "#a855f7" },
+    "shape": { "type": "circle" },
+    "opacity": { "value": 0.6 },
+    "size": { "value": 3 },
+    "line_linked": {
+      "enable": true,
+      "distance": 130,
+      "color": "#a855f7",
+      "opacity": 0.4,
+      "width": 1
+    },
+    "move": {
+      "enable": true,
+      "speed": 2
+    }
+  },
+  "interactivity": {
+    "detect_on": "canvas",
+    "events": {
+      "onhover": { "enable": true, "mode": "repulse" },
+      "onclick": { "enable": true, "mode": "push" }
+    },
+    "modes": {
+      "repulse": { "distance": 100 },
+      "push": { "particles_nb": 4 }
+    }
+  },
+  "retina_detect": true
+});
+</script>
+
 </body>
 </html>
