--- a/static/css/consultchoice.css
+++ b/static/css/consultchoice.css
@@ -17,11 +17,13 @@ body, html {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: transparent;
-  z-index: -1;
   top: 0;
   left: 0;
+  z-index: -100;
+  background: transparent;
+  pointer-events: none;
 }
+
 
 /* === Container === */
 .consult-choice-container {
