--- a/static/css/login.css
+++ b/static/css/login.css
@@ -15,11 +15,13 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: transparent;
-  z-index: -1;
   top: 0;
   left: 0;
+  z-index: -100;
+  background: transparent;
+  pointer-events: none;
 }
+
 
 
 .login-container {
