--- a/static/css/report.css
+++ b/static/css/report.css
@@ -14,15 +14,15 @@ body {
   padding: 30px 20px;
   text-align: center;
 }
-
 #particles-js {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: transparent;
-  z-index: -1;
   top: 0;
   left: 0;
+  z-index: -100;
+  background: transparent;
+  pointer-events: none;
 }
 
 
