--- a/static/css/thankyou.css
+++ b/static/css/thankyou.css
@@ -24,11 +24,13 @@ body, html {
   position: fixed;
   width: 100%;
   height: 100%;
-  background: transparent;
-  z-index: -1;
   top: 0;
   left: 0;
+  z-index: -100;
+  background: transparent;
+  pointer-events: none;
 }
+
 
 
 .feature-box {
