--- a/templates/aadhaar.html
+++ b/templates/aadhaar.html
@@ -40,36 +40,39 @@
 <script>
 particlesJS("particles-js", {
   "particles": {
-    "number": { "value": 60 },
+    "number": { "value": 120, "density": { "enable": true, "value_area": 800 } },
     "color": { "value": "#a855f7" },
     "shape": { "type": "circle" },
-    "opacity": { "value": 0.6 },
-    "size": { "value": 3 },
+    "opacity": { "value": 0.5, "random": true },
+    "size": { "value": 3, "random": true },
     "line_linked": {
       "enable": true,
-      "distance": 130,
+      "distance": 150,
       "color": "#a855f7",
       "opacity": 0.4,
       "width": 1
     },
     "move": {
       "enable": true,
-      "speed": 2
+      "speed": 2,
+      "direction": "none",
+      "out_mode": "out"
     }
   },
   "interactivity": {
     "detect_on": "canvas",
     "events": {
-      "onhover": { "enable": true, "mode": "repulse" },
+      "onhover": { "enable": true, "mode": "grab" },
       "onclick": { "enable": true, "mode": "push" }
     },
     "modes": {
-      "repulse": { "distance": 100 },
+      "grab": { "distance": 200, "line_linked": { "opacity": 0.6 } },
       "push": { "particles_nb": 4 }
     }
   },
   "retina_detect": true
 });
+
 </script>
 
 </body>
