--- a/templates/consultchoice.html
+++ b/templates/consultchoice.html
@@ -35,6 +35,11 @@
   <!-- Particle JS Library -->
 <script src="/static/js/particles.min.js"></script>
 
+<!-- Particle JS Library -->
+<script src="/static/js/particles.min.js"></script>
+
+<!-- Particle Config -->
+<script>
 particlesJS("particles-js", {
   "particles": {
     "number": { "value": 120, "density": { "enable": true, "value_area": 800 } },
@@ -69,6 +74,7 @@ particlesJS("particles-js", {
   },
   "retina_detect": true
 });
+</script>
 
 
 
