--- a/templates/consult.html
+++ b/templates/consult.html
@@ -49,6 +49,11 @@
   <!-- Particle JS Library -->
 <script src="/static/js/particles.min.js"></script>
 
+<!-- Particle JS Library -->
+<script src="/static/js/particles.min.js"></script>
+
+<!-- Particle Config -->
+<script>
 particlesJS("particles-js", {
   "particles": {
     "number": { "value": 120, "density": { "enable": true, "value_area": 800 } },
@@ -83,7 +88,7 @@ particlesJS("particles-js", {
   },
   "retina_detect": true
 });
-
+</script>
 
 </body>
 </html>
