--- a/templates/report.html
+++ b/templates/report.html
@@ -112,43 +112,73 @@
     });
   </script>
 
-  <!-- Particle JS -->
-  <script src="/static/js/particles.min.js"></script>
-  <script>
-    particlesJS("particles-js", {
-      "particles": {
-        "number": { "value": 120, "density": { "enable": true, "value_area": 800 } },
-        "color": { "value": "#a855f7" },
-        "shape": { "type": "circle" },
-        "opacity": { "value": 0.5, "random": true },
-        "size": { "value": 3, "random": true },
-        "line_linked": {
+<!-- Particle JS -->
+<script src="/static/js/particles.min.js"></script>
+
+<!-- Ultra Interactive + Fast Particles Config -->
+<script>
+document.addEventListener("DOMContentLoaded", () => {
+  particlesJS("particles-js", {
+    "particles": {
+      "number": {
+        "value": 160,
+        "density": {
           "enable": true,
+          "value_area": 800
+        }
+      },
+      "color": { "value": "#a855f7" },
+      "shape": { "type": "circle" },
+      "opacity": {
+        "value": 0.6,
+        "random": true,
+        "anim": { "enable": true, "speed": 1, "opacity_min": 0.1 }
+      },
+      "size": {
+        "value": 3,
+        "random": true,
+        "anim": { "enable": true, "speed": 4, "size_min": 0.3 }
+      },
+      "line_linked": {
+        "enable": true,
+        "distance": 120,
+        "color": "#a855f7",
+        "opacity": 0.4,
+        "width": 1
+      },
+      "move": {
+        "enable": true,
+        "speed": 3.5,
+        "direction": "none",
+        "random": false,
+        "straight": false,
+        "out_mode": "bounce",
+        "bounce": true
+      }
+    },
+    "interactivity": {
+      "detect_on": "canvas",
+      "events": {
+        "onhover": { "enable": true, "mode": "grab" },
+        "onclick": { "enable": true, "mode": "repulse" },
+        "resize": true
+      },
+      "modes": {
+        "grab": {
+          "distance": 200,
+          "line_linked": { "opacity": 0.7 }
+        },
+        "repulse": {
           "distance": 150,
-          "color": "#a855f7",
-          "opacity": 0.4,
-          "width": 1
+          "duration": 0.6
         },
-        "move": {
-          "enable": true,
-          "speed": 2,
-          "direction": "none",
-          "out_mode": "out"
-        }
-      },
-      "interactivity": {
-        "detect_on": "canvas",
-        "events": {
-          "onhover": { "enable": true, "mode": "grab" },
-          "onclick": { "enable": true, "mode": "push" }
-        },
-        "modes": {
-          "grab": { "distance": 200, "line_linked": { "opacity": 0.6 } },
-          "push": { "particles_nb": 4 }
-        }
-      },
-      "retina_detect": true
-    });
-  </script>
+        "push": { "particles_nb": 4 }
+      }
+    },
+    "retina_detect": true
+  });
+});
+</script>
+
 </body>
 </html>
