--- a/templates/thankyou.html
+++ b/templates/thankyou.html
@@ -26,6 +26,8 @@
       <button onclick="window.location.href='/'" class="btn-glow">Back to Home</button>
     </div>
   </div>
+  <script src="/static/js/thankyou.js"></script>
+
   
 <!-- Particle JS -->
 <script src="/static/js/particles.min.js"></script>
