--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -74,16 +74,14 @@
 <script src="/static/js/particles.min.js"></script>
 
 <!-- Ultra Interactive + Fast Particles Config -->
+<!-- Particle Config -->
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+window.onload = () => {
   particlesJS("particles-js", {
     "particles": {
       "number": {
         "value": 160,
-        "density": {
-          "enable": true,
-          "value_area": 800
-        }
+        "density": { "enable": true, "value_area": 800 }
       },
       "color": { "value": "#a855f7" },
       "shape": { "type": "circle" },
@@ -108,8 +106,6 @@ document.addEventListener("DOMContentLoaded", () => {
         "enable": true,
         "speed": 3.5,
         "direction": "none",
-        "random": false,
-        "straight": false,
         "out_mode": "bounce",
         "bounce": true
       }
@@ -122,21 +118,16 @@ document.addEventListener("DOMContentLoaded", () => {
         "resize": true
       },
       "modes": {
-        "grab": {
-          "distance": 200,
-          "line_linked": { "opacity": 0.7 }
-        },
-        "repulse": {
-          "distance": 150,
-          "duration": 0.6
-        },
+        "grab": { "distance": 200, "line_linked": { "opacity": 0.7 } },
+        "repulse": { "distance": 150, "duration": 0.6 },
         "push": { "particles_nb": 4 }
       }
     },
     "retina_detect": true
   });
-});
+};
 </script>
+
 
 
 
