--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -73,31 +73,18 @@
 <!-- Particle JS -->
 <script src="/static/js/particles.min.js"></script>
 
-<!-- Ultra Interactive + Fast Particles Config -->
-<!-- Particle Config -->
 <script>
-window.onload = () => {
+document.addEventListener("DOMContentLoaded", () => {
   particlesJS("particles-js", {
     "particles": {
-      "number": {
-        "value": 160,
-        "density": { "enable": true, "value_area": 800 }
-      },
+      "number": { "value": 120, "density": { "enable": true, "value_area": 800 } },
       "color": { "value": "#a855f7" },
       "shape": { "type": "circle" },
-      "opacity": {
-        "value": 0.6,
-        "random": true,
-        "anim": { "enable": true, "speed": 1, "opacity_min": 0.1 }
-      },
-      "size": {
-        "value": 3,
-        "random": true,
-        "anim": { "enable": true, "speed": 4, "size_min": 0.3 }
-      },
+      "opacity": { "value": 0.6, "random": true },
+      "size": { "value": 3, "random": true },
       "line_linked": {
         "enable": true,
-        "distance": 120,
+        "distance": 130,
         "color": "#a855f7",
         "opacity": 0.4,
         "width": 1
@@ -111,21 +98,20 @@ window.onload = () => {
       }
     },
     "interactivity": {
-      "detect_on": "canvas",
+      "detect_on": "canvas",  // or try "window" if still not working
       "events": {
         "onhover": { "enable": true, "mode": "grab" },
-        "onclick": { "enable": true, "mode": "repulse" },
-        "resize": true
+        "onclick": { "enable": true, "mode": "repulse" }
       },
       "modes": {
-        "grab": { "distance": 200, "line_linked": { "opacity": 0.7 } },
+        "grab": { "distance": 200, "line_linked": { "opacity": 0.6 } },
         "repulse": { "distance": 150, "duration": 0.6 },
         "push": { "particles_nb": 4 }
       }
     },
     "retina_detect": true
   });
-};
+});
 </script>
 
 
