--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -75,7 +75,7 @@
 
 <!-- Particle Config -->
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+window.onload = () => {
   particlesJS("particles-js", {
     "particles": {
       "number": { "value": 360, "density": { "enable": true, "value_area": 800 } },
