--- a/templates/imageupload.html
+++ b/templates/imageupload.html
@@ -40,21 +40,15 @@
   </div>
   <script src="/static/js/imageupload.js"></script>
 
-<!-- Particle JS -->
+<!-- Particle JS Library -->
 <script src="/static/js/particles.min.js"></script>
 
-<!-- Ultra Interactive + Fast Particles Config -->
+<!-- Final Particle Config -->
 <script>
-document.addEventListener("DOMContentLoaded", () => {
+window.onload = function () {
   particlesJS("particles-js", {
     "particles": {
-      "number": {
-        "value": 160,
-        "density": {
-          "enable": true,
-          "value_area": 800
-        }
-      },
+      "number": { "value": 360, "density": { "enable": true, "value_area": 800 } },
       "color": { "value": "#a855f7" },
       "shape": { "type": "circle" },
       "opacity": {
@@ -69,7 +63,7 @@ document.addEventListener("DOMContentLoaded", () => {
       },
       "line_linked": {
         "enable": true,
-        "distance": 120,
+        "distance": 130,
         "color": "#a855f7",
         "opacity": 0.4,
         "width": 1
@@ -78,8 +72,6 @@ document.addEventListener("DOMContentLoaded", () => {
         "enable": true,
         "speed": 3.5,
         "direction": "none",
-        "random": false,
-        "straight": false,
         "out_mode": "bounce",
         "bounce": true
       }
@@ -87,27 +79,18 @@ document.addEventListener("DOMContentLoaded", () => {
     "interactivity": {
       "detect_on": "canvas",
       "events": {
-        "onhover": { "enable": true, "mode": "grab" },
-        "onclick": { "enable": true, "mode": "repulse" },
-        "resize": true
+        "onhover": { "enable": true, "mode": "repulse" },
+        "onclick": { "enable": true, "mode": "push" }
       },
       "modes": {
-        "grab": {
-          "distance": 200,
-          "line_linked": { "opacity": 0.7 }
-        },
-        "repulse": {
-          "distance": 150,
-          "duration": 0.6
-        },
+        "repulse": { "distance": 150, "duration": 0.6 },
         "push": { "particles_nb": 4 }
       }
     },
     "retina_detect": true
   });
-});
+};
 </script>
-
 
 </body>
 </html>
