--- a/templates/imageupload.html
+++ b/templates/imageupload.html
@@ -21,22 +21,23 @@
     </div>
 
     <div class="upload-area">
-      <h2>If you have any images or videos please upload or skip</h2>
-      <form method="POST" enctype="multipart/form-data">
-        <div class="upload-box">
-          <label>Upload Image (if any)</label>
-          <input type="file" name="image" accept="image/*">
-        </div>
-
-        <div class="upload-box">
-          <label>Upload Video (if any)</label>
-          <input type="file" name="video" accept="video/*">
-        </div>
-
-        <button type="submit">Continue</button>
-        <button type="submit" name="skip">Skip</button>
-      </form>
+  <h2>If you have any images or videos, please upload or skip</h2>
+  <form method="POST" enctype="multipart/form-data">
+    <div class="upload-box">
+      <label>Upload Image (if any)</label>
+      <input type="file" name="image" accept="image/*">
     </div>
+
+    <div class="upload-box disabled">
+      <label>Upload Video (not supported currently)</label>
+      <input type="file" name="video" accept="video/*" disabled>
+    </div>
+
+    <button type="submit">Continue</button>
+    <button type="submit" name="skip">Skip</button>
+  </form>
+</div>
+
   </div>
   <script src="/static/js/imageupload.js"></script>
 
