--- a/static/css/imageupload.css
+++ b/static/css/imageupload.css
@@ -198,3 +198,16 @@ button:hover {
     font-size: 13px;
   }
 }
+
+/* Disabled Upload Box Styling */
+.upload-box.disabled {
+  background: rgba(255, 255, 255, 0.03);
+  opacity: 0.6;
+  pointer-events: none;
+}
+
+.upload-box.disabled label {
+  color: #aaa;
+  font-style: italic;
+}
+
