--- a/templates/report.html
+++ b/templates/report.html
@@ -20,9 +20,9 @@
       <div class="active">7</div>
     </div>
 
-    <h1>🧾 SOAP Report for {{ name }}</h1>
-    <p><strong>Date of Birth:</strong> {{ dob }}</p>
-    <p><strong>Aadhaar Number:</strong> {{ aadhaar }}</p>
+    <h1>🧾 SOAP Report for {{ name if name and name != 'Cannot be extracted' else 'Not provided' }}</h1>
+    <p><strong>Date of Birth:</strong> {{ dob if dob and dob != 'Cannot be extracted' else 'Not provided' }}</p>
+    <p><strong>Aadhaar Number:</strong> {{ aadhaar if aadhaar and aadhaar != 'Cannot be extracted' else 'Not provided' }}</p>
 
     <div class="soap-box fade-in">
       <div class="soap-header">Subjective <span class="divider"></span></div>
