--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -45,7 +45,7 @@
         <textarea
         id="symptoms"
         name="symptoms"
-        placeholder="e.g. Fever, cough, fatigue..."
+        placeholder="e.g. Fever, cough, fatigue...| Created by Shadab"
         required
         ></textarea>
 
