--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -34,13 +34,12 @@
         <span id="recordStatus">Click to start recording</span>
         </div>
 
-        <label for="language">Language:</label>
-        <select id="languageSelect">
+        <label for="language">Language for SOAP Report:</label>
+        <select id="languageSelect" name="language">
             <option value="en-IN" selected>English</option>
-            <option value="hi-IN">Hindi</option>
-            <option value="or-IN">Odia</option>
+            <option value="hi-IN">Hindi (हिंदी)</option>
+            <option value="or-IN">Odia (ଓଡ଼ିଆ)</option>
         </select>
-
 
         <textarea
         id="symptoms"
