--- a/templates/symptoms.html
+++ b/templates/symptoms.html
@@ -47,6 +47,7 @@
         placeholder="e.g. Fever, cough, fatigue...| Created by Shadab"
         required
         ></textarea>
+        <div id="transcription-display" style="display: none;"></div>
 
        <label for="severity">How severe is it?</label>
       <div class="severity-bar">
